{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 407,
  "lineage": "4b4379aa-e959-917c-173b-194cce57253c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ultima_application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:loadbalancer/app/ultima-lb-tf/97c29537718463b6",
            "arn_suffix": "app/ultima-lb-tf/97c29537718463b6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ultima-lb-tf-318605731.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:564141216590:loadbalancer/app/ultima-lb-tf/97c29537718463b6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ultima-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0aaca8380712e9419"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0097f78f0fe4cd09d"
              },
              {
                "subnet_id": "subnet-0924c0df17fde9c57"
              },
              {
                "subnet_id": "subnet-0d767bd6d5001187f"
              }
            ],
            "subnets": [
              "subnet-0097f78f0fe4cd09d",
              "subnet-0924c0df17fde9c57",
              "subnet-0d767bd6d5001187f"
            ],
            "vpc_id": "vpc-00bdafa2a39aa48a4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_subnet.ultima_subnet_a",
            "aws_default_subnet.ultima_subnet_b",
            "aws_default_subnet.ultima_subnet_c",
            "aws_security_group.ultima_load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "ultima_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:subnet/subnet-0097f78f0fe4cd09d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0097f78f0fe4cd09d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564141216590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ultima us-east-1a"
            },
            "tags_all": {
              "Name": "ultima us-east-1a"
            },
            "vpc_id": "vpc-00bdafa2a39aa48a4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "ultima_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:subnet/subnet-0d767bd6d5001187f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0d767bd6d5001187f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564141216590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ultima us-east-1b"
            },
            "tags_all": {
              "Name": "ultima us-east-1b"
            },
            "vpc_id": "vpc-00bdafa2a39aa48a4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "ultima_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:subnet/subnet-0924c0df17fde9c57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0924c0df17fde9c57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564141216590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ultima us-east-1c"
            },
            "tags_all": {
              "Name": "ultima us-east-1c"
            },
            "vpc_id": "vpc-00bdafa2a39aa48a4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "ultima_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:vpc/vpc-00bdafa2a39aa48a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0e2eec47029129ab9",
            "default_route_table_id": "rtb-05f9f2abbaab5db12",
            "default_security_group_id": "sg-073e247cf0301acd9",
            "dhcp_options_id": "dopt-07b25083cd4e43514",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-00bdafa2a39aa48a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f9f2abbaab5db12",
            "owner_id": "564141216590",
            "tags": {
              "Name": "ultima_VPC"
            },
            "tags_all": {
              "Name": "ultima_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ultima_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:listener/app/ultima-lb-tf/97c29537718463b6/6af08eaaef026558",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:targetgroup/ultima-target-group/60a546481891b9f8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:564141216590:listener/app/ultima-lb-tf/97c29537718463b6/6af08eaaef026558",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:loadbalancer/app/ultima-lb-tf/97c29537718463b6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.ultima_application_load_balancer",
            "aws_default_subnet.ultima_subnet_a",
            "aws_default_subnet.ultima_subnet_b",
            "aws_default_subnet.ultima_subnet_c",
            "aws_default_vpc.ultima_vpc",
            "aws_lb_target_group.ultima_target_group",
            "aws_security_group.ultima_load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vvv2006_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:listener/app/ultima-lb-tf/97c29537718463b6/96d631a38c991b96",
            "certificate_arn": "arn:aws:acm:us-east-1:564141216590:certificate/3a2f0d25-ab5e-4c2f-9849-45509c87ff89",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:targetgroup/ultima-target-group/60a546481891b9f8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:564141216590:listener/app/ultima-lb-tf/97c29537718463b6/96d631a38c991b96",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:loadbalancer/app/ultima-lb-tf/97c29537718463b6",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.ultima_application_load_balancer",
            "aws_default_subnet.ultima_subnet_a",
            "aws_default_subnet.ultima_subnet_b",
            "aws_default_subnet.ultima_subnet_c",
            "aws_default_vpc.ultima_vpc",
            "aws_lb_target_group.ultima_target_group",
            "aws_security_group.ultima_load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ultima_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564141216590:targetgroup/ultima-target-group/60a546481891b9f8",
            "arn_suffix": "targetgroup/ultima-target-group/60a546481891b9f8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:564141216590:targetgroup/ultima-target-group/60a546481891b9f8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ultima-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00bdafa2a39aa48a4"
          },
          "dependencies": [
            "aws_default_vpc.ultima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ultima_load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:security-group/sg-0aaca8380712e9419",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aaca8380712e9419",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20221114123458773500000001",
            "name_prefix": "terraform-",
            "owner_id": "564141216590",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00bdafa2a39aa48a4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ultima_service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564141216590:security-group/sg-0c9641380e5c12cec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9641380e5c12cec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0aaca8380712e9419"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20221114123505304300000003",
            "name_prefix": "terraform-",
            "owner_id": "564141216590",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00bdafa2a39aa48a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ultima_load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}